# CPP_Lab2

./: .gitignore  CMakeLists.txt  THEORY.md  ip_filter.cpp  ip_filter.h  main.cpp  test_ip_filter.cpp
.github/workflows/: release.yml
